--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - dev
-  pull_request:
-    branches:
-      - dev
+      - standalone-app-desktop
 
 jobs:
   build-linux:
