FIx on build process

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "build": {
     "appId": "com.k.app",
     "productName": "K",
+    "publish": null,
     "directories": {
       "output": "build"
     },
