--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -147,11 +147,11 @@ jobs:
             ### Downloads
 
             #### Linux
-            - **Debian/Ubuntu (.deb)**: Install with `sudo dpkg -i K_${{ steps.package-version.outputs.version }}_amd64.deb`
-            - **AppImage**: Make executable with `chmod +x K-${{ steps.package-version.outputs.version }}.AppImage` and run
+            - **Debian/Ubuntu (.deb)**: Install with `sudo dpkg -i K-${{ steps.package-version.outputs.version }}-linux-x64.deb`
+            - **AppImage**: Make executable with `chmod +x K-${{ steps.package-version.outputs.version }}-linux-x64.AppImage` and run
 
             #### Windows
-            - **Portable (.exe)**: Run `K-${{ steps.package-version.outputs.version }}.exe` directly, no installation required
+            - **Portable (.exe)**: Run `K-${{ steps.package-version.outputs.version }}-windows-x64.exe` directly, no installation required
 
             ### Installation Instructions
 
