Fixing Android compilation

--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -140,20 +140,49 @@ jobs:
       - name: Add Android platform
         run: npx cap add android
 
+      - name: Configure Android SDK versions
+        run: |
+          cat > android/variables.gradle << 'EOF'
+          ext {
+              minSdkVersion = 23
+              compileSdkVersion = 35
+              targetSdkVersion = 35
+              androidxActivityVersion = '1.7.2'
+              androidxAppCompatVersion = '1.6.1'
+              androidxCoordinatorLayoutVersion = '1.2.0'
+              androidxCoreVersion = '1.10.1'
+              androidxFragmentVersion = '1.6.1'
+              coreSplashScreenVersion = '1.0.1'
+              androidxWebkitVersion = '1.7.0'
+              junitVersion = '4.13.2'
+              androidxJunitVersion = '1.1.5'
+              androidxEspressoCoreVersion = '3.5.1'
+              cordovaAndroidVersion = '10.1.1'
+          }
+          EOF
+
+      - name: Configure Android Gradle Plugin
+        run: |
+          sed -i "s/classpath 'com.android.tools.build:gradle:[^']*'/classpath 'com.android.tools.build:gradle:8.2.2'/" android/build.gradle
+
+      - name: Configure Java 21
+        run: |
+          echo "org.gradle.java.home=$JAVA_HOME" >> android/gradle.properties
+
       - name: Sync Capacitor
         run: npx cap sync android
 
-      - name: Build Android APK
+      - name: Build Android APK (Debug)
         run: |
           cd android
-          ./gradlew assembleRelease
+          ./gradlew assembleDebug
 
       - name: Upload APK artifact (dev branch)
         if: github.ref == 'refs/heads/dev'
         uses: actions/upload-artifact@v4
         with:
           name: k-android-apk
-          path: android/app/build/outputs/apk/release/*.apk
+          path: android/app/build/outputs/apk/debug/*.apk
           retention-days: 30
 
       - name: Upload Android artifacts for release (master branch)
@@ -161,7 +190,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android-release-artifacts
-          path: android/app/build/outputs/apk/release/*.apk
+          path: android/app/build/outputs/apk/debug/*.apk
           retention-days: 90
 
       - name: Upload build summary
@@ -171,7 +200,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Generated Artifacts" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          ls -lh android/app/build/outputs/apk/release/*.apk 2>/dev/null || echo "No artifacts found" >> $GITHUB_STEP_SUMMARY
+          ls -lh android/app/build/outputs/apk/debug/*.apk 2>/dev/null || echo "No artifacts found" >> $GITHUB_STEP_SUMMARY
 
   create-release:
     needs: [build-linux, build-windows, build-android]
