--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "electron:build:appimage": "npm run build && electron-builder --linux AppImage",
     "electron:build:win": "npm run build && electron-builder --win --x64",
     "android:sync": "npx cap sync android",
-    "android:build": "npm run build && npx cap sync android && npx cap build android",
+    "android:build": "npm run build && npx cap sync android && cd android && ./gradlew assembleRelease",
     "android:open": "CAPACITOR_ANDROID_STUDIO_PATH=/snap/android-studio/209/bin/studio.sh npx cap open android"
   },
   "dependencies": {
