--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,12 @@ dist-ssr
 TO_DO.md
 build
 
-# Capacitor
-android
+# Capacitor - Keep configuration but ignore build artifacts and local files
+android/.gradle/
+android/.idea/
+android/build/
+android/app/build/
+android/local.properties
+android/*.keystore
+android/capacitor-cordova-android-plugins/build/
+android/gradle/
