--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ dist-ssr
 TO_DO.md
 build
 .claude
+render.html
 
 # Capacitor - Keep configuration but ignore build artifacts and local files
 android/.gradle/
