--- a/.github/workflows/build-multi-platform.yml
+++ b/.github/workflows/build-multi-platform.yml
@@ -140,17 +140,27 @@ jobs:
       - name: Sync Capacitor
         run: npx cap sync android
 
-      - name: Build Android APK (Debug)
+      - name: Setup Android signing
+        run: |
+          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > $RUNNER_TEMP/release.keystore
+          echo "Keystore decoded to temporary location"
+
+      - name: Build Android APK (Release - Signed)
+        env:
+          KEYSTORE_FILE: ${{ runner.temp }}/release.keystore
+          KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: |
           cd android
-          ./gradlew assembleDebug
+          ./gradlew assembleRelease
 
       - name: Upload APK artifact (dev branch)
         if: github.ref == 'refs/heads/dev'
         uses: actions/upload-artifact@v4
         with:
           name: k-android-apk
-          path: android/app/build/outputs/apk/debug/*.apk
+          path: android/app/build/outputs/apk/release/*.apk
           retention-days: 30
 
       - name: Upload Android artifacts for release (master branch)
@@ -158,7 +168,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android-release-artifacts
-          path: android/app/build/outputs/apk/debug/*.apk
+          path: android/app/build/outputs/apk/release/*.apk
           retention-days: 90
 
       - name: Upload build summary
@@ -168,7 +178,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Generated Artifacts" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          ls -lh android/app/build/outputs/apk/debug/*.apk 2>/dev/null || echo "No artifacts found" >> $GITHUB_STEP_SUMMARY
+          ls -lh android/app/build/outputs/apk/release/*.apk 2>/dev/null || echo "No artifacts found" >> $GITHUB_STEP_SUMMARY
 
   create-release:
     needs: [build-linux, build-windows, build-android]
@@ -221,12 +231,23 @@ jobs:
             - **Portable (.exe)**: Run `K-${{ steps.package-version.outputs.version }}-windows-x64.exe` directly, no installation required
 
             #### Android
-            - **APK (Debug Build - Unsigned)**: Download and install the APK file. You may need to enable "Install from Unknown Sources" in your Android settings.
+            - **APK (Release Build - Signed)**: Download and install the APK file. You may need to enable "Install from Unknown Sources" in your Android settings.
 
-            **⚠️ Android Build Notice:**
-            - This is a **DEBUG version** intended for development and testing purposes only
-            - The APK is **UNSIGNED** and not suitable for distribution through official app stores
-            - For production use, a signed release build with proper keystore credentials is required
+            **✓ Android Build Notice:**
+            - This is a **RELEASE version** with a signed APK
+            - The APK is cryptographically signed and can be verified using the certificate fingerprint below
+
+            **APK Signature Verification:**
+
+            To verify the APK authenticity, check that the SHA-256 fingerprint matches:
+            ```
+            2E:E0:D9:FF:5C:8A:12:A7:0B:F4:BB:9D:41:9E:8D:F3:76:20:37:B1:76:66:BF:20:92:06:4F:BA:5D:F3:D7:C2
+            ```
+
+            Verify downloaded APK with:
+            ```bash
+            apksigner verify --print-certs K-*.apk
+            ```
 
             ### Installation Instructions
 
