--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${defaultConfig.archivesBaseName}.apk"
+        }
+    }
 }
 
 repositories {
