Updated gradle configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,8 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "${defaultConfig.archivesBaseName}.apk"
+            def versionName = variant.versionName
+            outputFileName = "K-${versionName}-android.apk"
         }
     }
 }
