--- a/.github/workflows/build-multi-platform.yml
+++ b/.github/workflows/build-multi-platform.yml
@@ -219,39 +219,36 @@ jobs:
           tag_name: v${{ steps.package-version.outputs.version }}
           name: Release v${{ steps.package-version.outputs.version }}
           body: |
-            ## K Application Release v${{ steps.package-version.outputs.version }}
+            ### Release notes
+            - ⚠️ **IMPORTANT: This is the first release configured by default to work on Kaspa MAINNET**
+            - This release uses **real KAS coins**. Please be aware that any transactions will involve actual cryptocurrency. Make sure you understand the implications before using this version.
+
+            ---
 
             ### Downloads
 
             #### Linux
-            - **Debian/Ubuntu (.deb)**: Install with `sudo dpkg -i K-${{ steps.package-version.outputs.version }}-linux-x64.deb`
-            - **AppImage**: Make executable with `chmod +x K-${{ steps.package-version.outputs.version }}-linux-x64.AppImage` and run
+            - **Debian/Ubuntu installer (.deb)**: Install with `sudo dpkg -i K-${{ steps.package-version.outputs.version }}-linux-x64.deb`
+            - **Debian/Ubuntu portable (.AppImage)**: Make executable with `chmod +x K-${{ steps.package-version.outputs.version }}-linux-x64.AppImage` and run
 
             #### Windows
-            - **Portable (.exe)**: Run `K-${{ steps.package-version.outputs.version }}-windows-x64.exe` directly, no installation required
+            - **Windows portable (.exe)**: Run `K-${{ steps.package-version.outputs.version }}-windows-x64.exe` directly (no installation required)
 
             #### Android
-            - **APK (Release Build - Signed)**: Download and install the APK file. You may need to enable "Install from Unknown Sources" in your Android settings.
+            - **Android app (.apk)**: Download and install the APK file. You may need to enable "Install from Unknown Sources" in your Android settings.
 
-            **✓ Android Build Notice:**
-            - This is a **RELEASE version** with a signed APK
-            - The APK is cryptographically signed and can be verified using the certificate fingerprint below
+                **APK Signature Verification:**
 
-            **APK Signature Verification:**
+                To verify the APK authenticity, check that the SHA-256 fingerprint matches:
+                ```
+                2E:E0:D9:FF:5C:8A:12:A7:0B:F4:BB:9D:41:9E:8D:F3:76:20:37:B1:76:66:BF:20:92:06:4F:BA:5D:F3:D7:C2
+                ```
 
-            To verify the APK authenticity, check that the SHA-256 fingerprint matches:
-            ```
-            2E:E0:D9:FF:5C:8A:12:A7:0B:F4:BB:9D:41:9E:8D:F3:76:20:37:B1:76:66:BF:20:92:06:4F:BA:5D:F3:D7:C2
-            ```
+                Verify downloaded APK with:
+                ```bash
+                apksigner verify --print-certs K-*.apk
+                ```
 
-            Verify downloaded APK with:
-            ```bash
-            apksigner verify --print-certs K-*.apk
-            ```
-
-            ### Installation Instructions
-
-            See the [README](https://github.com/${{ github.repository }}/blob/master/README.md) for detailed setup instructions.
           files: |
             ./release-artifacts/*.deb
             ./release-artifacts/*.AppImage
