--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "emoji-picker-react": "4.16.1",
     "jdenticon": "^3.3.0",
     "js-base64": "3.7.8",
+    "linkify-react": "^4.3.2",
+    "linkifyjs": "^4.3.2",
     "lucide-react": "0.556.0",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
